# cmake-begin

./: .gitignore  .gitmodules  README.md
build_opencv_4.x/: README.md
opencv-samples/: CMakeLists.txt  main.cpp
python_binding/: CMakeLists.txt  vcpkg.json
v1_basic/: CMakeLists.txt  README.md
v1_basic/src/: main.cpp
v2_gen_lib/: CMakeLists.txt  README.md
v3_link_static_lib/: CMakeLists.txt  README.md
v4_link_shared_lib/: CMakeLists.txt  README.md
v4_link_shared_lib/lib/: libcalc.dylib
v4_link_shared_lib/src/: main.cpp
v5_nested_project/: CMakeLists.txt  README.md
v5_nested_project/calc/: CMakeLists.txt
v5_nested_project/calc/src/: add.cpp  sub.cpp
v5_nested_project/include/: calc.h
v5_nested_project/sort/: CMakeLists.txt
v5_nested_project/sort/src/: insert.cpp  select.cpp
v5_nested_project/test1/: CMakeLists.txt  calc.cpp
v5_nested_project/test2/: CMakeLists.txt
v6_static_link_static_lib/: CMakeLists.txt  README.md
v6_static_link_static_lib/sort/: CMakeLists.txt
v6_static_link_static_lib/sort/src/: insert.cpp
v6_static_link_static_lib/test/: CMakeLists.txt
v7_static_link_shared_lib/: CMakeLists.txt
v7_static_link_shared_lib/calc/: CMakeLists.txt
v7_static_link_shared_lib/calc/src/: div.cpp  mult.cpp
v7_static_link_shared_lib/include/: sort.h
v7_static_link_shared_lib/sort/: CMakeLists.txt
v7_static_link_shared_lib/sort/src/: select.cpp
v7_static_link_shared_lib/test/: sort.cpp
v8_common_cmd/: CMakeLists.txt  main.cpp
vcpkg-sample/: CMakeLists.txt
